roco-gen/tests/templates/snapshots/inject[tests_task_mod]@task.snap
---
source: roco-gen/tests/templates/task.rs
expression: "fs::read_to_string(tests_task_path.join(\"mod.rs\")).expect(\"Failed to read updated tests task mod file: mod.rs\")"
---
pub mod cleanup;
