roco-gen/tests/templates/snapshots/inject[tests_worker_mod]@worker.snap
---
source: roco-gen/tests/templates/worker.rs
expression: "fs::read_to_string(tests_worker_path.join(\"mod.rs\")).expect(\"Failed to read updated tests worker mod file: mod.rs\")"
---
pub mod register_email;
