roco-gen/tests/templates/snapshots/inject[views_[POST]]@Html_controller.snap
---
source: roco-gen/tests/templates/controller.rs
expression: "fs::read_to_string(tree_fs.root.join(\"assets\").join(\"views\").join(\"movie\").join(format!(\"{}.html\",\naction.to_uppercase()))).expect(\"view file missing\")"
---
<!DOCTYPE html>
<html lang="en">

<head>
    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
</head>

<body class="prose p-10">
    <h1>View POST</h1>
    Find me in <code>movie/POST</code>
</body>

</html>
